Added possibility to show backlinks on every wiki page automatically

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,8 @@
 = Wiki Backlinks plugin for Redmine
 
-Plugin providing backlinks macro for Redmine wiki pages.
+Plugin providing backlinks for Redmine wiki pages. It shows backlinks to opened wiki page unless turned off in settings. (And you can use {{backlinks}} macro in wiki pages too.)
 
-Usage: {{backlinks}}
-
-Tested on Redmine 2.3
+Tested on Redmine 2.3.
 
 == Installation
 
